fix:spacing on contact container

--- a/style.css
+++ b/style.css
@@ -387,8 +387,8 @@ article .icon {
     justify-content: center;
     flex-direction: column;
     height: 70vh;
-    padding-top: 4rem;
-    margin-top: 4rem;
+    padding-top: 30rem;
+    margin-top: 30rem;
 }
 
 .contact-info-upper-container {
